veil-tests/src/compile_tests/fail/redact_variant_on_field.rs
fn main() {}

#[derive(veil::Redact)]
struct Foos {
    #[redact(variant)]
    bar: String,
}

#[derive(veil::Redact)]
enum Fooe {
    Bar {
        #[redact(variant)]
        baz: String,
    }
}
